--- a/style/global.css
+++ b/style/global.css
@@ -35,21 +35,21 @@
 
 }
 
-.container {
-  max-width: 1366px;
-  padding-inline: 120px;
-  margin-inline: auto;
-
-}
 
 h1, h2, h3 {
   font: inherit;
 }
 
-body {
-  background-image: url(/assets/Background_Intro.png);
+
+
+span {
+  color: var(--main-color-red);
 }
 
+
+#bg-header{
+  background-image: url(/assets/image/Background_Intro.png);
+}
 
 
 
