--- a/style/utility.css
+++ b/style/utility.css
@@ -1,3 +1,19 @@
 .grid {
   display: grid;
 }
+
+.grid-flow-col{
+  grid-auto-flow: column;
+
+}
+
+.margin {
+  margin-inline: auto;
+}
+
+.container {
+  max-width: 1366px;
+  padding-inline: 120px;
+  margin: auto;
+
+}
