--- a/style/main.css
+++ b/style/main.css
@@ -1,27 +1,13 @@
 main{
   padding-block: 72px 144px;
 
-  header {
-    margin-inline: auto;
-    width: 1040px;
-    flex-direction: column; 
-    justify-items: center;
-    gap: 8px;
-    margin-bottom: 56px;
+  
 
-    h2 {
-      font: var(--subtitle);
-    }
-    h1 {
-      font: var(--title-md);
-      color: var(--gray-600);
-    }
-  }
-
-  section {
+  #work {
 
     grid-template-columns: repeat(3, 330px);
     gap: 24px;
+    
 
     figure {
       background: var(--gray-300);
@@ -57,3 +43,8 @@ main{
     }
 
   }
+
+  #service {
+    padding-top: 88px;
+  }
+
