--- a/style/utility.css
+++ b/style/utility.css
@@ -17,3 +17,20 @@
   margin: auto;
 
 }
+
+.header {
+  margin-inline: auto;
+    width: 1040px;
+    flex-direction: column; 
+    justify-items: center;
+    gap: 8px;
+    margin-bottom: 56px;
+
+    h2 {
+      font: var(--subtitle);
+    }
+    h1 {
+      font: var(--title-md);
+      color: var(--gray-600);
+    }
+}
