--- a/style/utility.css
+++ b/style/utility.css
@@ -19,7 +19,7 @@
 }
 
 .header {
-  margin-inline: auto;
+    margin-inline: auto;
     width: 1040px;
     flex-direction: column; 
     justify-items: center;
@@ -33,4 +33,22 @@
       font: var(--title-md);
       color: var(--gray-600);
     }
+    p{
+      font: var(--text-md);
+      color: var(--gray-500);
+    }
+}
+
+.bg-header{
+  background-image: url(/assets/image/Background_Intro.png);
+}
+
+.bg-work {
+  background: var(--gray-200);
+}
+.bg-service {
+  background: var(--gray-100);
+}
+.bg-contact {
+  background: url(/assets/image/Background_Contacts.png);
 }
